<resources>
    <string name="app_name">Mixi</string>
    <string name="record_label">Record</string>
    <string name="write_to_storage_label">Write to storage</string>
    <string name="read_from_storage_label">Read from storage</string>
    <string name="start_recording_label">Record</string>
    <string name="stop_recording_label">Stop</string>
    <string name="recording_permission_needed">Record audio permission is needed to be able to record audio in this operation</string>
    <string name="read_external_storage_permission_needed">Read external file permission is needed to be able to read from external files</string>
    <string name="write_external_storage_permission_needed">Write external file permission is needed to be able to write into external storage</string>
    <string name="done_label">Done</string>
    <string name="reset_label">Reset</string>
    <string name="play_label">Play</string>
    <string name="play_mixed_label">Play Mixed</string>
    <string name="pause_label">Pause</string>
    <string name="live_playback">Live Playback</string>
    <string name="recording_time">00:00</string>

    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="mixing_play">Mixing Play</string>
    <string name="menu_item_gain_adjustment">Gain Adjustment</string>
    <string name="menu_item_segment_adjustment">Segment Adjustment</string>
    <string name="common_close">Close</string>
    <string name="common_apply">Apply</string>
    <string name="zero_label">0</string>
    <string name="common_save">Save</string>
    <string name="permission_require_title">Permission required</string>
    <string name="permission_recording_require_message">Recording permission is required</string>
    <string name="permission_read_require_message">Read permission is required</string>
    <string name="permission_write_require_message">Write permission is required</string>
    <string name="common_cancel">Cancel</string>
    <string name="open_settings">Open settings</string>
    <string name="play_head_label">Play Head:</string>
    <string name="start_ms">Start (ms)</string>
    <string name="duration_ms">Duration (ms)</string>
    <string name="output_file_name">File name</string>

    <string name="error_segment_bounds_required">Segment start and duration has to be set</string>
    <string name="error_segment_duration_should_be_less_than_duration">Segment duration should be less than file duration</string>
    <string name="clear_bounds">Clear</string>
    <string name="menu_item_shift">Shift</string>

    <string name="error_shift_duration_required">Shift duration has to be set</string>
    <string name="error_play_head_required">Play head has to be set</string>
    <string name="error_play_head_should_be_less_than_numsamples">Play head should be less than total samples</string>

    <string name="error_write_file_name_cannot_be_empty">File name can\'t be empty</string>
    <string name="error_write_file_list_empty">Couldn\'t write, there are no loaded files</string>
    <string name="error_file_write_directory_could_not_be_obtained">File write directory couldn\'t be obtained</string>
    <string name="error_file_exists_in_target_directory">File exists in target directory</string>
    <string name="error_could_not_use_file_for_write">Couldn\'t use file for write</string>
    <string name="error_file_write_failed">Write to target file failed</string>
    <string name="error_unsupported_file_type">This file format is not supported. Currently wav and mp3 files are supported only.</string>

    <string name="info_file_wrote_as_media">File wrote as media</string>

    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="paste_new">Paste New</string>
    <string name="mute">Mute</string>
    <string name="wav_extension">.wav</string>
    <string name="toggle_bottom_drawer">Toggle Bottom Drawer</string>
    <string name="gain_db">Apply Gain (dB):</string>
    <string name="test_gain">Test Gain:</string>
    <string name="require_headphone">Require\'s headphone</string>

</resources>
