<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/segment_adjustment_dialog_height"
        android:minWidth="@dimen/dialog_min_width"
        android:minHeight="@dimen/shift_dialog_height"
        android:paddingHorizontal="@dimen/dialog_layout_padding"
        android:paddingVertical="@dimen/dialog_vertical_padding"
        tools:context=".screens.mixing.modals.WriteDialog">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/writeFileNameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/output_file_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/writeFileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/fileExtensionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wav_extension"
            android:layout_marginEnd="@dimen/file_extension_margin_right"
            app:layout_constraintTop_toTopOf="@id/writeFileNameLayout"
            app:layout_constraintBottom_toBottomOf="@id/writeFileNameLayout"
            app:layout_constraintEnd_toEndOf="@id/writeFileNameLayout" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/clearAmountIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/writeFileNameLayout"
            app:layout_constraintBottom_toBottomOf="@id/writeFileNameLayout"
            app:layout_constraintEnd_toStartOf="@id/fileExtensionText"
            android:layout_marginEnd="@dimen/file_clear_margin_right"
            app:srcCompat="@drawable/ic_clear" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/segment_adjustment_error_height"
            app:layout_constraintBottom_toTopOf="@id/performWrite"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:layout_marginBottom="@dimen/segment_adjustment_error_margin_bottom"
            android:textColor="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Could not save data" />

        <Button
            android:id="@+id/performWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/cancelWrite"
            android:layout_marginEnd="@dimen/dialog_button_margin" />

        <Button
            android:id="@+id/cancelWrite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/common_close"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/dialog_button_margin"/>

        <include layout="@layout/view_loading" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
